5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1578_1559.log
== SUBMITION (2019-03-13 18:59:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper)
-- EXECUTION TIME:
0.13595
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f31e21654a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:59:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.136247
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:59:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.21873
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".upper()
print(frase.)
-- EXECUTION TIME:
0.200674
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".upper()
print(frase.???)
-- EXECUTION TIME:
0.148468
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".upper()
print(frase.???)
-- EXECUTION TIME:
0.118378
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".upper()
print(frase.???)
-- EXECUTION TIME:
0.174426
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:26) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".upper()
print(frase.upper)
-- EXECUTION TIME:
0.133415
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7fd52efa6ed0>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:27) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".upper()
print(frase.upper)
-- EXECUTION TIME:
0.251718
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7fb7d2a15ed0>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper)
-- EXECUTION TIME:
0.136019
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper)
-- EXECUTION TIME:
0.126801
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:37) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.218095
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.11211
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1559/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.157838
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.105618
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.225416
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:46) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.175347
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:00:46) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.105592
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.182867
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper("Ada Lovelace foi a primeira programadora da historia".))
-- EXECUTION TIME:
0.138525
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase().upper())
-- EXECUTION TIME:
0.13877
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase().upper
-- EXECUTION TIME:
0.169692
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase().upper
-- EXECUTION TIME:
0.171931
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase().upper)
-- EXECUTION TIME:
0.121877
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:01:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase().upper)
-- EXECUTION TIME:
0.163466
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper(frase))
-- EXECUTION TIME:
0.14462
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper(frase))
-- EXECUTION TIME:
0.138561
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper(frase))
-- EXECUTION TIME:
0.098757
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1559/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper
-- EXECUTION TIME:
0.136143
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper
-- EXECUTION TIME:
0.12237
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper)
-- EXECUTION TIME:
0.160174
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper)
-- EXECUTION TIME:
0.126015
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper)
-- EXECUTION TIME:
0.106344
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase).upper()
-- EXECUTION TIME:
0.13626
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase).upper()
-- EXECUTION TIME:
0.136627
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase).upper()
-- EXECUTION TIME:
0.161258
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase).upper()
-- EXECUTION TIME:
0.126988
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:57) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.14664
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:02:57) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.113488
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1559/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:07:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.179033
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:07:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.143474
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:07:49) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.174286
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper("frase"))
-- EXECUTION TIME:
0.132958
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper("frase"))
-- EXECUTION TIME:
0.151043
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper("frase"))
-- EXECUTION TIME:
0.106969
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:28) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print("frase".upper())
-- EXECUTION TIME:
0.198748
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:29) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print("frase".upper())
-- EXECUTION TIME:
0.19709
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.141597
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.139311
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.099416
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:08:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase(.upper())
-- EXECUTION TIME:
0.153276
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.224317
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.126195
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.111414
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.102683
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:18) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase)
-- EXECUTION TIME:
0.169929
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:23) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.127572
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.226329
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.110605
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(frase.upper())
-- EXECUTION TIME:
0.108831
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.155664
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:28:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia".
print(.upper(frase))
-- EXECUTION TIME:
0.204319
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia".
                                                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".
print(frase.upper())
-- EXECUTION TIME:
0.140423
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.".
                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".
print(frase.upper())
-- EXECUTION TIME:
0.155766
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.".
                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia.".
print(frase.upper())
-- EXECUTION TIME:
0.107863
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 1
    frase = "Ada Lovelace foi a primeira programadora da historia.".
                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:33:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.134409
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:33:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.127906
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:33:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.11791
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
